Atualização do portfolio

--- a/portifolio/about.html
+++ b/portifolio/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre mim</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <header class="cabecalho">
@@ -14,10 +15,14 @@
     </header>
 
     <main>
+        <section>
+            <h1>Olá! Sou Ricardo Alves, estou me especializando em <strong class="competencias">Front-End</strong>.<br> Curso Ciências da Computação e estou fazendo alguns cursos <br> na plataforma da Alura para agregar ao meu currículo.
+        </section>
+        <img class="apresentacao__imagem__about" src=".vscode/assets/salveme.jpg" alt="">
     </main>
 
     <footer class="rodape">
-        <p>Desenvolvido por Ricardo ALves</p>
+        <p>Desenvolvido por Ricardo Alves</p>
     </footer>
 </body>
 </html>
