--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -27,10 +27,10 @@
                     Instagram</a>
             </div>
         </section>
-        <img class="apresentacao__imagem" src=".vscode\assets\salveme.jpg" alt="SALVE-ME MAHORAGA">
+        <img class="apresentacao__imagem" src=".vscode/assets/salveme.jpg" alt="SALVE-ME MAHORAGA">
     </main>
     <footer class="rodape">
-        <p>Desenvolvido por Ricardo ALves</p>
+        <p>Desenvolvido por Ricardo Alves</p>
     </footer>
 </body>
 </html>
