--- a/portifolio/about.html
+++ b/portifolio/about.html
@@ -14,11 +14,13 @@
         </nav>
     </header>
 
-    <main>
-        <section>
-            <h1>Olá! Sou Ricardo Alves, estou me especializando em <strong class="competencias">Front-End</strong>.<br> Curso Ciências da Computação e estou fazendo alguns cursos <br> na plataforma da Alura para agregar ao meu currículo.
+    <main class="apresentacao">
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo"> <strong class="titulo_destaque">Sobre mim</strong></h1>
+            <p class="apresentacao__conteudo__texto">Olá! Sou um estudante de Ciência da Computação, buscando constantemente expandir meus conhecimentos e habilidades nesta fascinante área. Atualmente, estou me aprimorando por meio de cursos na plataforma Alura, onde tenho explorado diversos tópicos, desde programação a banco de dados.</p>
+            <p class="apresentacao__conteudo__texto">Embora ainda não tenha experiência profissional, estou determinado a me tornar um profissional qualificado e contribuir de forma significativa para o mundo da tecnologia. Acredito firmemente que a educação contínua e a prática são fundamentais para o sucesso nesta área em constante evolução.</p>
+            <p class="apresentacao__conteudo__texto">Estou ansioso para aplicar os conhecimentos adquiridos em projetos reais e ganhar experiência prática que me permita crescer profissionalmente. Meu objetivo é não apenas encontrar uma oportunidade no mercado de trabalho, mas também contribuir de maneira positiva para qualquer equipe da qual faça parte.</p>
         </section>
-        <img class="apresentacao__imagem__about" src=".vscode/assets/salveme.jpg" alt="">
     </main>
 
     <footer class="rodape">
