--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -15,7 +15,7 @@
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo"> Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
+            <h1 class="apresentacao__conteudo__titulo"> Eleve seu negócio digital a outro nível <strong class="titulo_destaque">com um Front-end de qualidade!</strong></h1>
             <p class="apresentacao__conteudo__texto">Olá! Sou Ricardo Alves, estou me especializando em <strong class="competencias">Front-End</strong>.<br> Curso Ciências da Computação e estou fazendo alguns cursos <br> na plataforma da Alura para agregar ao meu currículo.</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulos"> Acesse minhas redes: </h2>
