--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -19,12 +19,14 @@
             <p class="apresentacao__conteudo__texto">Olá! Sou Ricardo Alves, estou me especializando em <strong class="competencias">Front-End</strong>.<br> Curso Ciências da Computação e estou fazendo alguns cursos <br> na plataforma da Alura para agregar ao meu currículo.</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulos"> Acesse minhas redes: </h2>
-                <a class="apresentacao__links__link" href="https://github.com/RicardoJrn1">
+                <a class="apresentacao__links__navegacao" href="https://github.com/RicardoJrn1">
                     <img src=".vscode\assets\github.png">
-                    Github</a>
-                <a class="apresentacao__links__link" href="https://www.instagram.com/ricardjrn/">
+                    Github
+                </a>
+                <a class="apresentacao__links__navegacao" href="https://www.instagram.com/ricardjrn/">
                     <img src=".vscode\assets\instagram.png">
-                    Instagram</a>
+                    Instagram
+                </a>
             </div>
         </section>
         <img class="apresentacao__imagem" src=".vscode/assets/salveme.jpg" alt="SALVE-ME MAHORAGA">
